test/positive/feature_externalcall.java

public class feature_externalcall {
  public feature_externalcall() {}
  public int m(java.util.Vector x) {
    return x.size();
  }
}

