test/negative/feature_throw.java

public class feature_throw {
  public feature_throw() {}
  public int m(int x) throws java.lang.Exception {
    if (x==42)
      throw new java.lang.Exception();
    return x;
  }
}

